--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "test": "vitest run unit",
-    "test:integration": "vitest run integration",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
+    "test": "vitest run unit --config vitest.config.ts",
+    "test:coverage": "vitest run unit --coverage --config vitest.config.ts",
+    "test:integration": "vitest run integration --config vitest.integration.config.ts",
+    "test:integration:coverage": "vitest run integration --coverage --config vitest.integration.config.ts",
     "test:ui": "vitest --ui",
     "format": "prettier --write \"**/*.{ts,tsx,md}\" --check-ignore-pragma",
     "format:check": "prettier --check \"**/*.{ts,tsx,md}\" --check-ignore-pragma",
