--- a/packages/key-vault/package.json
+++ b/packages/key-vault/package.json
@@ -7,8 +7,8 @@
     ".": "./src/index.ts"
   },
   "scripts": {
-    "test": "vitest run unit --config __tests__/vitest.config.ts",
-    "test:integration": "vitest run integration --config __tests__/vitest.config.ts",
+    "test": "vitest run unit --config __tests__/vitest.integration.config.ts",
+    "test:integration": "vitest run integration --config __tests__/vitest.integration.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
@@ -22,7 +22,8 @@
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
     "vitest": "^3.2.4",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "@vitest/coverage-v8": "3.2.4"
   },
   "dependencies": {
     "@azure/identity": "^4.13.0",
