--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/ejs": "^3.1.5",
     "@types/node": "^24.5.2",
-    "@vitest/coverage-istanbul": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "barrelsby": "^2.8.1",
     "ejs": "^3.1.10",
@@ -29,7 +28,8 @@
     "tsx": "^4.20.6",
     "turbo": "^2.5.8",
     "typescript": "5.9.2",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "@vitest/coverage-v8": "3.2.4"
   },
   "packageManager": "pnpm@10.10.0",
   "engines": {
