--- a/packages/crypto/package.json
+++ b/packages/crypto/package.json
@@ -19,8 +19,7 @@
     "@types/node": "^22.5.2",
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
-    "vitest": "^3.2.4",
-    "@vitest/coverage-v8": "3.2.4"
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@repo/enums": "workspace:*",
