--- a/packages/key-vault/package.json
+++ b/packages/key-vault/package.json
@@ -22,8 +22,7 @@
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
     "vitest": "^3.2.4",
-    "zod": "^4.1.12",
-    "@vitest/coverage-v8": "3.2.4"
+    "zod": "^4.1.12"
   },
   "dependencies": {
     "@azure/identity": "^4.13.0",
