--- a/packages/exception/package.json
+++ b/packages/exception/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "../../scripts/barrel.ts",
     "test": "vitest run unit --config __tests__/vitest.config.ts",
+    "test:coverage": "vitest run unit --coverage --config __tests__/vitest.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
