chore(nestjs): improve tests (#60)

--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -10,7 +10,8 @@
     "dev": "pnpm dotenvx nest start --watch",
     "start": "pnpm dotenvx node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test:integration": "vitest run integration --config __tests__/vitest.config.mts",
+    "test:integration": "vitest run ${1:-integration} --config __tests__/vitest.integration.config.mts",
+    "test:integration:coverage": "vitest run ${1:-integration} --coverage --config __tests__/vitest.integration.config.mts",
     "dotenvx": "../../scripts/dotenvx.sh",
     "pull:openapi-spec": "../../scripts/pull.sh ../../packages/contract/generated/openapi.json static/openapi.json"
   },
@@ -36,6 +37,7 @@
     "@t3-oss/env-core": "^0.13.8",
     "@ts-rest/core": "^3.53.0-rc.1",
     "@ts-rest/nest": "^3.53.0-rc.1",
+    "qs": "^6.14.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "zod": "^4.1.12"
@@ -52,9 +54,12 @@
     "@swc/core": "^1.13.5",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.7",
+    "@types/qs": "^6.14.0",
     "@types/supertest": "^6.0.2",
     "@types/webpack-node-externals": "^3.0.4",
+    "cbor": "^10.0.11",
     "globals": "^16.0.0",
+    "jose": "^6.1.0",
     "npm-run-all": "^4.1.5",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
