--- a/packages/exception/package.json
+++ b/packages/exception/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "../../scripts/barrel.ts",
     "test": "vitest run unit --config __tests__/vitest.config.ts",
+    "test:coverage": "vitest run unit --coverage --config __tests__/vitest.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
@@ -17,6 +18,7 @@
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/validation": "workspace:*",
+    "@standard-schema/spec": "^1.0.0",
     "@types/node": "^22.5.2",
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
