--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "test": "vitest run unit",
-    "test:integration": "vitest run integration",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage",
+    "test": "vitest run unit --config vitest.config.ts",
+    "test:coverage": "vitest run unit --coverage --config vitest.config.ts",
+    "test:integration": "vitest run integration --config vitest.integration.config.ts",
+    "test:integration:coverage": "vitest run integration --coverage --config vitest.integration.config.ts",
     "test:ui": "vitest --ui",
     "format": "prettier --write \"**/*.{ts,tsx,md}\" --check-ignore-pragma",
     "format:check": "prettier --check \"**/*.{ts,tsx,md}\" --check-ignore-pragma",
@@ -20,7 +20,6 @@
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/ejs": "^3.1.5",
     "@types/node": "^24.5.2",
-    "@vitest/coverage-istanbul": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "barrelsby": "^2.8.1",
     "ejs": "^3.1.10",
@@ -29,7 +28,8 @@
     "tsx": "^4.20.6",
     "turbo": "^2.5.8",
     "typescript": "5.9.2",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "@vitest/coverage-v8": "3.2.4"
   },
   "packageManager": "pnpm@10.10.0",
   "engines": {
