--- a/packages/key-vault/package.json
+++ b/packages/key-vault/package.json
@@ -7,13 +7,14 @@
     ".": "./src/index.ts"
   },
   "scripts": {
-    "test": "vitest run unit --config __tests__/vitest.config.ts",
-    "test:integration": "vitest run integration --config __tests__/vitest.config.ts",
+    "test": "vitest run unit --config __tests__/vitest.integration.config.ts",
+    "test:integration": "vitest run integration --config __tests__/vitest.integration.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
+    "@repo/test-helpers": "workspace:*",
     "@repo/prisma": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
