--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -24,11 +24,13 @@
     "@repo/crypto": "workspace:*",
     "@repo/enums": "workspace:*",
     "@repo/exception": "workspace:*",
-    "@repo/validation": "workspace:*",
     "@repo/logger": "workspace:*",
     "@repo/prisma": "workspace:*",
+    "@repo/validation": "workspace:*",
+    "bcryptjs": "^3.0.3",
     "hono": "^4.9.10",
     "jose": "^6.1.0",
-    "typanion": "^3.14.0"
+    "typanion": "^3.14.0",
+    "zod": "^4.1.12"
   }
 }
