--- a/apps/plasmo/package.json
+++ b/apps/plasmo/package.json
@@ -15,7 +15,8 @@
     "plasmo": "0.90.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@repo/validation": "workspace:*"
+    "@repo/validation": "workspace:*",
+    "@repo/enums": "workspace:*"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
