--- a/apps/plasmo/.env.development
+++ b/apps/plasmo/.env.development
@@ -1,2 +1,2 @@
 PLASMO_PUBLIC_API_BASE_URL="http://localhost:3000"
-PLASMO_PUBLIC_API_KEY=""
+PLASMO_PUBLIC_API_KEY="sk_live_23vKgKLnLs6xKcNMeAhK6w_K4FRAo8Ce1hvltdpxuI8SVTc26mLfHqjCDjuleNr5w4"
