--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@repo/validation",
+  "name": "@repo/browser",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -7,9 +7,6 @@
     ".": "./src/index.ts"
   },
   "scripts": {
-    "build": "pnpm barrel",
-    "barrel": "../../scripts/barrel.ts",
-    "test": "vitest run unit --config __tests__/vitest.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
@@ -17,17 +14,13 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/node": "^22.5.2",
-    "barrelsby": "^2.8.1",
-    "npm-run-all": "^4.1.5",
-    "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
-    "vitest": "^3.2.4",
-    "zod-openapi": "^5.4.3"
+    "vitest": "^3.2.4"
   },
   "dependencies": {
-    "@repo/transformers": "workspace:*",
     "@repo/enums": "workspace:*",
+    "@repo/validation": "workspace:*",
+    "typanion": "^3.14.0",
     "zod": "^4.1.12"
   }
 }
