--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -53,6 +53,7 @@
     "@simplewebauthn/server": "^13.2.2",
     "@swc/core": "^1.13.5",
     "@types/express": "^5.0.0",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.10.7",
     "@types/qs": "^6.14.0",
     "@types/supertest": "^6.0.2",
@@ -60,6 +61,7 @@
     "cbor": "^10.0.11",
     "globals": "^16.0.0",
     "jose": "^6.1.0",
+    "lodash-es": "^4.17.21",
     "npm-run-all": "^4.1.5",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
