--- a/packages/virtual-authenticator/package.json
+++ b/packages/virtual-authenticator/package.json
@@ -7,8 +7,8 @@
     ".": "./src/index.ts"
   },
   "scripts": {
-    "test:integration": "vitest run integration --config __tests__/vitest.integration.config.ts",
-    "test:integration:coverage": "vitest run integration --coverage --config __tests__/vitest.integration.config.ts",
+    "test:integration": "vitest run --config __tests__/vitest.integration.config.ts",
+    "test:integration:coverage": "vitest run --coverage --config __tests__/vitest.integration.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
