--- a/packages/enums/package.json
+++ b/packages/enums/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
+    "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.5.2",
     "typescript": "^5.5.4",
