--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "exports": {
     ".": "./src/index.ts",
-    "./enums": "./src/enums/index.ts"
+    "./enums": "./src/enums/index.ts",
+    "./exceptions": "./src/exceptions/index.ts"
   },
   "scripts": {
     "test": "vitest run unit --config __tests__/vitest.config.ts",
