--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./validation": "./src/validation/index.ts"
   },
   "scripts": {
+    "build": "pnpm barrel",
+    "barrel": "../../scripts/barrel.ts ./src/validation ./src/validation/index.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
