--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "@repo/enums": "workspace:*",
     "@repo/utils": "workspace:*",
+    "@repo/virtual-authenticator": "workspace:*",
+    "@repo/auth": "workspace:*",
     "@repo/validation": "workspace:*",
     "@ts-rest/core": "3.53.0-rc.1",
     "@ts-rest/open-api": "3.53.0-rc.1",
