--- a/packages/exception/package.json
+++ b/packages/exception/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./http": "./src/http/index.ts"
   },
   "scripts": {
     "test:coverage": "vitest run unit --coverage --config __tests__/vitest.config.ts",
