--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -6,7 +6,8 @@
   "exports": {
     ".": "./src/index.ts",
     "./enums": "./src/enums/index.ts",
-    "./exceptions": "./src/exceptions/index.ts"
+    "./exceptions": "./src/exceptions/index.ts",
+    "./mappers": "./src/mappers/index.ts"
   },
   "scripts": {
     "test": "vitest run unit --config __tests__/vitest.config.ts",
