--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "exports": {
+    ".": "./src/index.ts",
+    "./mappers": "./src/mappers/index.ts"
+  },
   "scripts": {
     "build": "prisma generate",
     "format": "prisma format",
@@ -24,10 +26,8 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "@nestjs/jwt": "^11.0.0",
-    "@prisma/adapter-pg": "^6.18.0",
+    "@repo/exception": "workspace:*",
     "@prisma/client": "^6.16.3",
-    "@prisma/extension-accelerate": "^2.0.2",
-    "bcrypt": "^6.0.0"
+    "@prisma/extension-accelerate": "^2.0.2"
   }
 }
