--- a/packages/key-vault/package.json
+++ b/packages/key-vault/package.json
@@ -17,6 +17,7 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/test-helpers": "workspace:*",
     "@repo/prisma": "workspace:*",
+    "@repo/virtual-authenticator": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^22.5.2",
