--- a/packages/virtual-authenticator/package.json
+++ b/packages/virtual-authenticator/package.json
@@ -8,7 +8,8 @@
     "./enums": "./src/enums/index.ts",
     "./exception": "./src/exception/index.ts",
     "./validation": "./src/validation/index.ts",
-    "./mappers": "./src/mappers/index.ts"
+    "./mappers": "./src/mappers/index.ts",
+    "./__test__/helpers": "./__test__/helpers/index.ts"
   },
   "scripts": {
     "test:integration": "vitest run --config __tests__/vitest.integration.config.ts",
