--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "@repo/test-helpers",
+  "name": "@repo/core",
   "version": "0.0.0",
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/index.ts",
-    "./mocks/*": "./src/mocks/*.ts"
+    "./__tests__/helpers": "./__tests__/helpers/index.ts"
   },
   "scripts": {
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
-    "@prisma/internals": "6.16.3",
     "@repo/enums": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/keys": "workspace:*",
-    "@repo/prisma": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@repo/utils": "workspace:*",
@@ -24,7 +21,6 @@
     "@types/node": "^22.5.2",
     "jose": "^6.1.0",
     "lodash-es": "^4.17.21",
-    "prismock": "^1.35.4",
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4"
   }
