--- a/apps/plasmo/package.json
+++ b/apps/plasmo/package.json
@@ -16,7 +16,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "@repo/enums": "workspace:*",
-    "@repo/browser": "workspace:*"
+    "@repo/browser": "workspace:*",
+    "@repo/virtual-authenticator": "workspace:*",
+    "@repo/contract": "workspace:*"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
