--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -18,11 +18,13 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/cbor": "^6.0.4",
     "typescript": "^5.5.4",
     "vitest": "^3.2.4"
   },
   "dependencies": {
     "@repo/virtual-authenticator": "workspace:*",
+    "cbor": "^10.0.11",
     "typanion": "^3.14.0",
     "zod": "^4.1.12"
   }
