--- a/packages/browser/tsconfig.json
+++ b/packages/browser/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "@repo/typescript-config/base.json",
   "compilerOptions": {
-    "lib": ["DOM"]
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "types": []
   },
   "include": ["src"],
   "exclude": ["node_modules"]
