--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -16,10 +16,10 @@
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
+    "@repo/core": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/node": "^22.5.2",
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
     "vitest": "^3.2.4"
@@ -28,7 +28,9 @@
     "@repo/enums": "workspace:*",
     "@repo/exception": "workspace:*",
     "@repo/utils": "workspace:*",
+    "buffer": "^6.0.3",
     "cbor": "^10.0.11",
+    "cbor-x": "^1.6.0",
     "ts-pattern": "^5.8.0",
     "typanion": "^3.14.0",
     "zod": "^4.1.12"
