--- a/apps/plasmo/package.json
+++ b/apps/plasmo/package.json
@@ -18,7 +18,8 @@
     "@repo/enums": "workspace:*",
     "@repo/browser": "workspace:*",
     "@repo/virtual-authenticator": "workspace:*",
-    "@repo/contract": "workspace:*"
+    "@repo/contract": "workspace:*",
+    "@repo/auth": "workspace:*"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
