--- a/packages/virtual-authenticator/package.json
+++ b/packages/virtual-authenticator/package.json
@@ -18,9 +18,9 @@
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
+    "@repo/core": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/keys": "workspace:*",
-    "@repo/core": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@simplewebauthn/server": "^13.2.1",
     "@simplewebauthn/types": "^12.0.0",
@@ -33,14 +33,15 @@
     "vitest-mock-extended": "^3.1.0"
   },
   "dependencies": {
+    "@repo/crypto": "workspace:*",
     "@repo/enums": "workspace:*",
     "@repo/exception": "workspace:*",
-    "@repo/crypto": "workspace:*",
     "@repo/prisma": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/utils": "workspace:*",
     "cbor": "^10.0.11",
     "class-transformer": "^0.5.1",
+    "effect": "^3.19.4",
     "reflect-metadata": "^0.2.2",
     "typanion": "^3.14.0",
     "zod": "^4.1.12"
