--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -31,6 +31,7 @@
     "buffer": "^6.0.3",
     "cbor": "^10.0.11",
     "cbor-x": "^1.6.0",
+    "effect": "^3.19.4",
     "ts-pattern": "^5.8.0",
     "typanion": "^3.14.0",
     "zod": "^4.1.12"
