--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/ejs": "^3.1.5",
     "@types/node": "^24.5.2",
+    "@vitest/coverage-v8": "3.2.4",
     "@vitest/ui": "^3.2.4",
     "barrelsby": "^2.8.1",
     "ejs": "^3.1.10",
     "eslint": "^9.34.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.6.2",
     "tsx": "^4.20.6",
     "turbo": "^2.5.8",
     "typescript": "5.9.2",
-    "vitest": "^3.2.4",
-    "@vitest/coverage-v8": "3.2.4"
+    "vitest": "^3.2.4"
   },
   "packageManager": "pnpm@10.10.0",
   "engines": {
