--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -8,8 +8,8 @@
     "./validation": "./src/validation/index.ts"
   },
   "scripts": {
-    "build": "pnpm barrel && pnpm generate:spec",
-    "barrel": "../../scripts/barrel.ts ./src/validation ./src/validation/index.ts",
+    "build": "run-p barrel:* && pnpm generate:spec",
+    "barrel:validation": "../../scripts/barrel.ts ./src/validation ./src/validation/index.ts",
     "test": "vitest run unit --config __tests__/vitest.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit",
