--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -6,7 +6,8 @@
   "exports": {
     ".": "./src/index.ts",
     "./validation": "./src/validation/index.ts",
-    "./mappers": "./src/mappers/index.ts"
+    "./mappers": "./src/mappers/index.ts",
+    "./standard-impl": "./src/standard-impl/index.ts"
   },
   "scripts": {
     "build": "run-p barrel:*",
