--- a/apps/plasmo/package.json
+++ b/apps/plasmo/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@plasmohq/messaging": "0.7.1",
+    "@repo/auth": "workspace:*",
+    "@repo/browser": "workspace:*",
+    "@repo/contract": "workspace:*",
+    "@repo/virtual-authenticator": "workspace:*",
+    "effect": "^3.19.4",
     "nanoid": "3.3.7",
     "plasmo": "0.90.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@repo/browser": "workspace:*",
-    "@repo/virtual-authenticator": "workspace:*",
-    "@repo/contract": "workspace:*",
-    "@repo/auth": "workspace:*"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
