--- a/apps/auth-server/package.json
+++ b/apps/auth-server/package.json
@@ -18,6 +18,7 @@
     "@repo/prisma": "workspace:*",
     "@t3-oss/env-core": "^0.13.8",
     "better-auth": "^1.3.27",
+    "effect": "^3.19.4",
     "hono": "^4.9.10",
     "jose": "^6.1.0",
     "lodash-es": "^4.17.21",
