--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -19,7 +19,7 @@
     "@repo/typescript-config": "workspace:*",
     "@types/cbor": "^6.0.4",
     "typescript": "^5.5.4",
-    "vitest": "^3.2.4"
+    "@repo/keys": "workspace:*"
   },
   "dependencies": {
     "@repo/core": "workspace:*",
@@ -27,6 +27,7 @@
     "@repo/virtual-authenticator": "workspace:*",
     "cbor": "^10.0.11",
     "cbor-x": "^1.6.0",
+    "cbor2": "^2.0.1",
     "typanion": "^3.14.0",
     "zod": "^4.1.12"
   }
