--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -32,10 +32,13 @@
     "@repo/utils": "workspace:*",
     "buffer": "^6.0.3",
     "cbor": "^10.0.11",
+    "cbor-web": "^10.0.11",
     "cbor-x": "^1.6.0",
+    "cbor2": "^2.0.1",
     "effect": "^3.19.4",
     "ts-pattern": "^5.8.0",
     "typanion": "^3.14.0",
+    "uint8array-extras": "^1.5.0",
     "zod": "^4.1.12"
   }
 }
