--- a/packages/virtual-authenticator/package.json
+++ b/packages/virtual-authenticator/package.json
@@ -39,6 +39,7 @@
     "@repo/types": "workspace:*",
     "@repo/utils": "workspace:*",
     "cbor": "^10.0.11",
+    "cbor2": "^2.0.1",
     "class-transformer": "^0.5.1",
     "effect": "^3.19.4",
     "reflect-metadata": "^0.2.2",
