--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "lint": "turbo run lint",
     "test": "vitest run unit --config vitest.config.ts",
     "test:coverage": "vitest run unit --coverage --config vitest.config.ts",
-    "test:integration": "vitest run integration --config vitest.config.ts",
-    "test:integration:coverage": "vitest run integration --coverage --config vitest.config.ts",
+    "test:integration": "vitest run --config vitest.integration.config.ts",
+    "test:integration:coverage": "vitest run --coverage --config vitest.integration.config.ts",
     "test:ui": "vitest --ui",
     "format": "prettier --write \"**/*.{ts,tsx,md}\" --check-ignore-pragma",
     "format:check": "prettier --check \"**/*.{ts,tsx,md}\" --check-ignore-pragma",
