--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
       "mode": "auto"
     }
   ],
+  "vitest.configFiles": ["vitest.config.ts", "vitest.integration.config.ts"],
   "terminal.integrated.env.linux": {
     "ENVIRONMENT": "development"
   },
