vitest config package

--- a/apps/nestjs/package.json
+++ b/apps/nestjs/package.json
@@ -49,6 +49,7 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@repo/vitest-config": "workspace:*",
     "@simplewebauthn/server": "^13.2.2",
     "@swc/core": "^1.13.5",
     "@types/express": "^5.0.0",
