--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "test": "vitest run unit --config vitest.config.ts",
-    "test:coverage": "vitest run unit --coverage --config vitest.config.ts",
+    "test": "vitest run --config vitest.config.ts",
+    "test:coverage": "vitest run --coverage --config vitest.config.ts",
     "test:integration": "vitest run --config vitest.integration.config.ts",
     "test:integration:coverage": "vitest run --coverage --config vitest.integration.config.ts",
     "test:ui": "vitest --ui",
