--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -11,8 +11,8 @@
     "./__mocks__": "./__mocks__/index.ts"
   },
   "scripts": {
-    "test:integration": "vitest run integration --config __tests__/vitest.integration.config.ts",
-    "test:integration:coverage": "vitest run integration --coverage --config __tests__/vitest.integration.config.ts",
+    "test:integration": "vitest run --config __tests__/vitest.integration.config.ts",
+    "test:integration:coverage": "vitest run --coverage --config __tests__/vitest.integration.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
@@ -22,6 +22,7 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@repo/vitest-config": "workspace:*",
     "@types/node": "^22.5.2",
     "type-fest": "^5.0.1",
     "typescript": "^5.5.4",
