--- a/packages/exception/package.json
+++ b/packages/exception/package.json
@@ -9,7 +9,7 @@
     "./mappers": "./src/mappers/index.ts"
   },
   "scripts": {
-    "test:coverage": "vitest run unit --coverage --config __tests__/vitest.config.ts",
+    "test:coverage": "vitest run --coverage --config __tests__/vitest.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
