--- a/packages/key-vault/package.json
+++ b/packages/key-vault/package.json
@@ -8,12 +8,13 @@
     "./__mocks__": "./__mocks__/index.ts"
   },
   "scripts": {
-    "test": "vitest run unit --config __tests__/vitest.integration.config.ts",
-    "test:integration": "vitest run integration --config __tests__/vitest.integration.config.ts",
+    "test": "vitest run --config __tests__/vitest.integration.config.ts",
+    "test:integration": "vitest run --config __tests__/vitest.integration.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit"
   },
   "devDependencies": {
+    "@repo/vitest-config": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/core": "workspace:*",
     "@repo/prisma": "workspace:*",
