--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,15 +4,13 @@
   "private": true,
   "type": "module",
   "exports": {
-    "./globals.css": "./src/globals.css",
+    "./globals.css": "./src/styles/globals.css",
     "./postcss.config": "./postcss.config.mjs",
-    "./types": "./src/types.ts",
     "./lib/*": "./src/lib/*.ts",
     "./components/Typography": "./src/components/Typography/index.tsx",
-    "./components/*": [
-      "./src/components/*.tsx",
-      "./src/components/*.ts"
-    ]
+    "./components/*": "./src/components/*.tsx",
+    "./hooks/*": "./src/hooks/*.ts",
+    "./types": "./src/types.ts"
   },
   "scripts": {
     "lint": "eslint .",
@@ -20,17 +18,14 @@
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
-    "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@repo/vitest-config": "workspace:*",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4.1.14",
-    "tw-animate-css": "^1.4.0",
-    "typescript": "^5.5.4",
-    "vitest": "^3.2.4"
+    "typescript": "^5.5.4"
   },
   "dependencies": {
+    "tw-animate-css": "^1.4.0",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
