--- a/apps/plasmo/package.json
+++ b/apps/plasmo/package.json
@@ -10,16 +10,20 @@
     "package": "plasmo package"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@plasmohq/messaging": "0.7.1",
     "@repo/auth": "workspace:*",
     "@repo/browser": "workspace:*",
     "@repo/contract": "workspace:*",
+    "@repo/ui": "workspace:*",
     "@repo/virtual-authenticator": "workspace:*",
     "effect": "^3.19.4",
     "nanoid": "3.3.7",
     "plasmo": "0.90.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.66.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
