--- a/apps/plasmo/tsconfig.json
+++ b/apps/plasmo/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "@repo/typescript-config/plasmo.json",
   "exclude": ["node_modules"],
-  "include": [".plasmo/index.d.ts", "./**/*.ts", "./**/*.tsx"],
+  "include": [".plasmo/index.d.ts", "./**/*.ts", "./**/*.tsx", "global.d.ts"],
   "compilerOptions": {
     "paths": {
-      "~*": ["./*"]
+      "~*": ["./*"],
+      "@repo/ui/*": ["../../packages/ui/src/*"]
     }
   }
 }
