--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,13 +19,13 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@tailwindcss/postcss": "^4.1.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4.1.14",
     "typescript": "^5.5.4"
   },
   "dependencies": {
-    "tw-animate-css": "^1.4.0",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -51,6 +51,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "ts-pattern": "^5.8.0",
+    "tw-animate-css": "^1.4.0",
     "zod": "^4.1.12"
   }
 }
