--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -57,7 +57,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@repo/typescript-config": "workspace:*",
-    "@tailwindcss/postcss": "^4",
+    "postcss": "^8.4.35",
+    "autoprefixer": "^10.4.18",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^24.9.1",
     "@types/react": "^19",
@@ -65,7 +66,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "openapi-typescript": "^7.10.1",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "3.4.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
