--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -19,10 +19,11 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@tailwindcss/postcss": "^4.1.14",
+    "postcss": "^8.4.35",
+    "autoprefixer": "^10.4.18",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "3.4.0",
     "typescript": "^5.5.4"
   },
   "dependencies": {
