--- a/apps/wxt/package.json
+++ b/apps/wxt/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
+    "@vitejs/plugin-react": "^5.1.1",
     "@webext-core/messaging": "^2.3.0",
     "@webext-core/proxy-service": "^1.2.1",
     "react": "^19.1.1",
@@ -23,6 +24,7 @@
     "react-hook-form": "^7.66.0"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "@wxt-dev/module-react": "^1.1.3",
