--- a/apps/wxt/package.json
+++ b/apps/wxt/package.json
@@ -28,6 +28,8 @@
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "@wxt-dev/module-react": "^1.1.3",
+    "tailwindcss": "^4.1.17",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.2",
     "wxt": "^0.20.6"
   }
