--- a/apps/wxt/package.json
+++ b/apps/wxt/package.json
@@ -11,8 +11,7 @@
     "build:firefox": "wxt build -b firefox",
     "zip": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
-    "compile": "tsc --noEmit",
-    "postinstall": "wxt prepare"
+    "compile": "tsc --noEmit"
   },
   "dependencies": {
     "@repo/ui": "workspace:*",
