--- a/apps/console/.env.development
+++ b/apps/console/.env.development
@@ -4,6 +4,8 @@ BASE_URL="http://localhost:${PORT}"
 API_BASE_URL="http://localhost:3001"
 NEXT_PUBLIC_API_BASE_URL=${API_BASE_URL}
 
+AUTH_BASE_URL="http://localhost:3002"
+
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/prisma?schema=public"
 
 # https://github.com/settings/applications/3218560
