--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "pnpm dotenvx next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint"
+    "start": "pnpm dotenvx next start",
+    "lint": "eslint",
+    "dotenvx": "../../scripts/dotenvx.sh"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
