--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -30,6 +30,7 @@
     "@repo/prisma": "workspace:*",
     "@repo/proxy": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@repo/core": "workspace:*",
     "@tanstack/react-query": "^5.90.5",
     "@ts-rest/core": "^3.53.0-rc.1",
     "@ts-rest/react-query": "^3.52.1",
