--- a/apps/wxt/package.json
+++ b/apps/wxt/package.json
@@ -1,39 +1,44 @@
 {
-  "name": "wxt-react-starter",
+  "name": "@repo/wxt",
   "description": "manifest.json description",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "wxt",
-    "dev:firefox": "wxt -b firefox",
-    "build": "wxt build",
-    "build:firefox": "wxt build -b firefox",
-    "zip": "wxt zip",
-    "zip:firefox": "wxt zip -b firefox",
-    "compile": "tsc --noEmit"
+    "dev": "pnpm dotenvx wxt",
+    "dev:firefox": "pnpm dotenvx wxt -b firefox",
+    "build": "pnpm dotenvx wxt build",
+    "build:firefox": "pnpm dotenvx wxt build -b firefox",
+    "zip": "pnpm dotenvx wxt zip",
+    "zip:firefox": "pnpm dotenvx wxt zip -b firefox",
+    "compile": "tsc --noEmit",
+    "dotenvx": "../../scripts/dotenvx.sh"
   },
   "dependencies": {
-    "@repo/ui": "workspace:*",
-    "@vitejs/plugin-react": "^5.1.1",
-    "@webext-core/messaging": "^2.3.0",
-    "@webext-core/proxy-service": "^1.2.1",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "react-hook-form": "^7.66.0",
-    "react-use-promise": "^0.5.0",
-    "@repo/virtual-authenticator": "workspace:*",
-    "effect": "^3.19.4",
     "@repo/auth": "workspace:*",
     "@repo/browser": "workspace:*",
     "@repo/contract": "workspace:*",
-    "@repo/core": "workspace:*"
+    "@repo/core": "workspace:*",
+    "@repo/ui": "workspace:*",
+    "@repo/virtual-authenticator": "workspace:*",
+    "@vitejs/plugin-react": "^5.1.1",
+    "@webext-core/messaging": "^2.3.0",
+    "@webext-core/proxy-service": "^1.2.1",
+    "effect": "^3.19.4",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-hook-form": "^7.66.0",
+    "react-use-promise": "^0.5.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "@types/archiver": "^7.0.0",
+    "@types/node": "^24.10.1",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "@wxt-dev/module-react": "^1.1.3",
+    "archiver": "^7.0.1",
+    "crx": "^5.0.1",
     "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.2",
