--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vitest/coverage-v8": "3.2.4",
     "@vitest/ui": "^3.2.4",
     "barrelsby": "^2.8.1",
+    "copyfiles": "^2.4.1",
     "ejs": "^3.1.10",
     "eslint": "^9.34.0",
     "npm-run-all": "^4.1.5",
