--- a/packages/event-log/package.json
+++ b/packages/event-log/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "type": "module",
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./enums": "./src/enums/index.ts"
   },
   "scripts": {
     "test": "vitest run --config __tests__/vitest.config.ts",
