--- a/packages/virtual-authenticator/package.json
+++ b/packages/virtual-authenticator/package.json
@@ -8,12 +8,15 @@
     "./enums": "./src/enums/index.ts",
     "./exception": "./src/exception/index.ts",
     "./validation": "./src/validation/index.ts",
+    "./zod-validation": "./src/zod-validation/index.ts",
     "./mappers": "./src/mappers/index.ts",
     "./types": "./src/types/index.ts",
     "./repositories": "./src/repositories/index.ts",
     "./__test__/helpers": "./__test__/helpers/index.ts"
   },
   "scripts": {
+    "build": "run-p barrel:*",
+    "barrel:zod-validation": "../../scripts/barrel.ts ./src/zod-validation ./src/zod-validation/index.ts",
     "test:integration": "vitest run --config __tests__/vitest.integration.config.ts",
     "test:integration:coverage": "vitest run --coverage --config __tests__/vitest.integration.config.ts",
     "lint": "eslint .",
