--- a/packages/keys/package.json
+++ b/packages/keys/package.json
@@ -8,11 +8,13 @@
     "./enums": "./src/enums/index.ts",
     "./exceptions": "./src/exceptions/index.ts",
     "./mappers": "./src/mappers/index.ts",
-    "./validation": "./src/validation/index.ts"
+    "./validation": "./src/validation/index.ts",
+    "./zod-validation": "./src/zod-validation/index.ts"
   },
   "scripts": {
     "build": "run-p barrel:*",
     "barrel:validation": "../../scripts/barrel.ts ./src/validation ./src/validation/index.ts",
+    "barrel:zod-validation": "../../scripts/barrel.ts ./src/zod-validation ./src/zod-validation/index.ts",
     "test": "vitest run --config __tests__/vitest.config.ts",
     "test:coverage": "vitest run --coverage --config __tests__/vitest.config.ts",
     "lint": "eslint .",
