--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,6 +6,7 @@
   "exports": {
     "./mappers": "./src/mappers/index.ts",
     "./validation": "./src/validation/index.ts",
+    "./zod-validation": "./src/zod-validation/index.ts",
     "./__tests__/helpers": "./__tests__/helpers/index.ts"
   },
   "scripts": {
