--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "buffer": "^6.0.3",
-    "effect": "^3.19.4"
+    "effect": "^3.19.4",
+    "zod": "^4.1.12"
   }
 }
