--- a/packages/contract/package.json
+++ b/packages/contract/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "run-p barrel:* && pnpm generate:spec",
     "barrel:validation": "../../scripts/barrel.ts ./src/validation ./src/validation/index.ts",
+    "barrel:zod-validation": "../../scripts/barrel.ts ./src/zod-validation ./src/zod-validation/index.ts",
     "test": "vitest run --config __tests__/vitest.config.ts",
     "lint": "eslint .",
     "check-types": "tsc --noEmit",
