--- a/packages/virtual-authenticator/package.json
+++ b/packages/virtual-authenticator/package.json
@@ -16,8 +16,8 @@
   },
   "scripts": {
     "build": "run-p barrel:*",
-    "barrel:validation": "../../scripts/barrel.ts ./src/validation ./src/validation/index.ts",
-    "barrel:zod-validation": "../../scripts/barrel.ts ./src/zod-validation ./src/zod-validation/index.ts",
+    "barrel:validation": "../../scripts/barrel.ts ./src/validation",
+    "barrel:zod-validation": "../../scripts/barrel.ts ./src/zod-validation",
     "test:integration": "vitest run --config __tests__/vitest.integration.config.ts",
     "test:integration:coverage": "vitest run --coverage --config __tests__/vitest.integration.config.ts",
     "lint": "eslint .",
