--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "exports": {
     ".": "./src/index.ts",
-    "./validation": "./src/validation/index.ts",
+    "./zod-validation": "./src/zod-validation/index.ts",
     "./mappers": "./src/mappers/index.ts",
     "./standard-impl": "./src/standard-impl/index.ts"
   },
