--- a/apps/console/package.json
+++ b/apps/console/package.json
@@ -29,10 +29,10 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@repo/auth": "workspace:*",
     "@repo/contract": "workspace:*",
+    "@repo/core": "workspace:*",
     "@repo/prisma": "workspace:*",
     "@repo/proxy": "workspace:*",
     "@repo/ui": "workspace:*",
-    "@repo/core": "workspace:*",
     "@tanstack/react-query": "^5.90.5",
     "@ts-rest/core": "^3.53.0-rc.1",
     "@ts-rest/react-query": "^3.52.1",
@@ -62,6 +62,7 @@
     "@eslint/eslintrc": "^3",
     "@repo/typescript-config": "workspace:*",
     "@repo/wxt": "workspace:*",
+    "@standard-schema/spec": "^1.0.0",
     "@tailwindcss/postcss": "^4",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^24.9.1",
